--- a/src/styles/Inputs.css
+++ b/src/styles/Inputs.css
@@ -1,20 +1,48 @@
 .nav-inputs {
-  background-color: bisque;
+  background-color: #a8c2c2;
   border-radius: 20px;
   display: grid;
   grid-template-columns: 10% 25% 15% 15% 25% 10%;
+  grid-template-rows: 70% 30%;
   justify-self: center;
-  margin-top: 10px;
+  margin-top: 20px;
   padding: 30px;
   width: 98%;
 }
 
 .label__nav {
-  font-size: 16px;
+  font-size: 19px;
   font-weight: 600;
 }
 
 .placeholder__inputs {
   background-color: #1c1f23;
   color: white;
+}
+
+.inputText {
+  grid-column: 2;
+}
+
+.inputColumn {
+  grid-column: 3;
+}
+
+.inputComparison {
+  grid-column: 4;
+}
+
+.inputValue {
+  grid-column: 5;
+}
+
+.btnSubmit {
+  align-self: center;
+  background-color: #9f0613;
+  grid-column: 3/5;
+  grid-row: 2;
+  justify-self: center;
+  margin-top: 10px;
+  padding: 10px;
+  width: 70%;
 }
